frontend/src/styles.scss
// $primary-500: #b1083b;
// $primary-600: #d81b60;
// $primary-700: #c2185b;

$primary-500: #845EC2;
$primary-600: #7a50bd;
$primary-700: #512d86;


// Import Pico
@import "@picocss/pico/scss/pico";
@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu&display=swap");

$font-main: "Roboto", sans-serif;

* {
  font-family: $font-main;
}
:root {
  font-family: $font-main;
}
// @font-face {
//   font-family: "Roboto";
//   src: url(../public/fonts/Roboto-Regular.ttf) format("ttf");
// }

.container--footer {
  // border: 5px solid;
  text-align: center;
  // padding-top: 28vh;
  // position: absolute;
  // bottom: 100px;
  // // width: 100%;
  // height: 2rem;
}

.desc {
  text-align: justify;
  text-justify: inter-word;
}

.lang-selection {
  float: left;
}

.dropzone-i {
  display: none;
}

#rocket {
  color: $primary-600;
}

.fa {
  padding: 20px;
  font-size: 30px;
  width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
}

.fa:hover {
  opacity: 0.7;
}

.logo-div {
  margin-bottom: 30px;
}

button,
input[type="submit"],
input[type="button"],
input[type="reset"],
[role="button"] {
  padding: 4px 10px;
  // margin: 5px;
  margin-bottom: 9px;
}

.download-ul {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  gap: 40px;
  flex-wrap: wrap;
}

li::marker {
  content: "";
  font-size: 1.2em;
  color: $primary-600;
  list-style-type: none;
}

#root {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

footer {
  margin-top: auto;
  margin-bottom: 10px;
}

// .Toastify__toast-container--top-center {
//   color: #d81b60;
//   display: flex;
//   flex-direction: row;
// }

button {
  width: 1em;
}

.donation-div {
  margin: auto;
  margin-top: 30px;
  // width: 50%;
  text-align: center;
}

.foto-name {
  color: $primary-600;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $font-main;
}

// .container-fluid {
//   width: 90vh;
// }

.dropzone-main {
  align-items: center;
  align-content: center;
  text-align: center;
}

// @media (min-width: 1200px) {
//   .container {
//     max-width: 900px;
//   }

//   .dropzone-main a {
//     width: 32%;
//   }
// }

// @media (min-width: 900px) {

//   a {
//     width: 32%;
//   }
// }

.grid a {
  width: 100%;
}

// article {
//   margin: 0;
//   width: 150px;
//   height: 150px;
//   padding: 0;
//   position: relative;
//   display: inline-block;
// }

ul {
  list-style-type: none;
}

.download-ul {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  // flex-flow:column;
}
.thumbnail-img {
  // opacity: 0.5;
}

.thumbnail-img:hover {
  // opacity: 0.8;
}

.download-link {
  position: absolute;
  margin-top: -150px;
  margin-left: 10px;
  text-align: center;
  display: flex;
  flex-direction: row;
}

.download-link a {
  // border: #b1083b 1px solid;
  position: absolute;
  margin-top: 50px;
  margin-left: 130px;

  // margin: 0;
  font-size: 1.5rem;
  opacity: 0.8;
  background-color: rgb(255, 255, 255);
}

.download-link a:hover {
  // margin: 0;
  opacity: 0.9;
}

.slick-prev:before, .slick-next:before {
  color: #b1083b;
  font-size: 20px;
}

.my-slider {
  // padding: 10px;
  margin: 30px;
}

.thumb-article {
  // position: absolute;
  // margin-top: -150px;

}

.progress-upload {
  height: 25px;
}

.image-card {
  width: 170px;
  height: 170px;
  border: 1px solid $primary-600;
  border-radius: 4px;
  overflow: hidden;
  position: relative;
}

.image-card img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.image-card .info {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  color: #ffffff;
  text-align: center;
  padding: 8px;
}

.image-card .info a {
  display: block;
  text-decoration: none;
  color: #fff;
  margin-top: 5px;
}

.image-card .info a:hover {
  text-decoration: underline;
}

.image-card .info p {
  color: #fff; 

}

.image-card .info p {
  margin-bottom: 5px; 
}

.image-card .info a {
  margin-top: 0; 
}

.comparison-span {
  // color: $primary-800; 
  font-weight: bold;
}

body {
  background-image: url("../public/paper1.svg");
  background-size: 100% 100%;
  -o-background-size: 100% 100%;
  -webkit-background-size: 100% 100%;
  background-size: cover;
 }

